namespace StreamingPlatform.Models.Enums
{
    /// <summary>
    /// The subscription possible status.
    /// </summary>
    public enum SubscriptionStatus
    {
        Active,
        Inactive,
    }
}